# manim-ai-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  LICENSE  README.md  codex-sdk-runner.js  docker-check-ssh.sh  docker-compose.yml  docker-entrypoint.sh  docker-setup-ssh.sh  pyproject.toml
agent_workspace/: .gitkeep
docs/: AGENT_BACKBONE.md  LOSS_DESCENT_DEMO.md  MULTIAGENT_WORKFLOW.md  SIMPLE_MANIM_SCENE_IDEAS.md  VIDEO_CREATION_SCENARIO.md  WORK_IN_CONTAINER_SCENARIO.md  loss_descent_narration.json  loss_descent_scene_spec.json  scene_library.yaml
scripts/: gpt52_video_critique.py
src/ai_video_studio/: __init__.py
src/ai_video_studio/config/: __init__.py  settings.py
src/ai_video_studio/core/: __init__.py  agent_utils.py  scene_library.py  types.py
src/ai_video_studio/manim_scenes/: __init__.py  base_scene.py  demo_scenes.py  layouts.py  primitives.py  registry.py
src/ai_video_studio/manim_scenes/scenes/: __init__.py  function_demo.py  loss_descent.py  newton_third_law.py  parabolic_motion.py  pythagorean_theorem.py  secant_to_derivative.py  softmax_bars.py
src/ai_video_studio/pipeline/: __init__.py  cli.py  render_scenes.py
tests/: __init__.py  conftest.py  test_scene_library.py  test_settings.py  test_types.py
